[default-layout] fix height of sidecar cutting off content

--- a/packages/@sanity/default-layout/src/components/styles/Sidecar.css
+++ b/packages/@sanity/default-layout/src/components/styles/Sidecar.css
@@ -1,5 +1,9 @@
 @import 'part:@sanity/base/theme/variables-style';
 
+:root {
+  --nav-bar-box: 3.0625em; /* 49px */
+}
+
 .root {
   display: none;
   max-width: 0;
